[package]
name = "SteamServerPicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.6", features = ["png"]}
runas = "1.0.0"
winapi = "0.3.9"
windows = {version = "0.48.0"}
winres = "0.1.12"

[build-dependencies]
windows = "0.48.0"
winres = "0.1.12"